--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,23 +1,31 @@
-name: Pacman Commit Animation
+name: Generate pacman animation
 
 on:
-  schedule:
-    - cron: "0 0 * * *" # executa diariamente
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
   workflow_dispatch:
+
+  push:
+    branches:
+    - main
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    steps:
-      - name: Generate Pacman animation
-        uses: Platane/pacman@main
-        with:
-          github_user_name: leoacferraz
-          gif_out_path: dist/github-contribution-grid-pacman.gif
-          svg_out_path: dist/github-contribution-grid-pacman.svg
+    timeout-minutes: 5
 
-      - name: Push animation to output branch
-        uses: crazy-max/ghaction-github-pages@v4
+    steps:
+      - name: generate pacman-contribution-graph.svg
+        uses: abozanona/pacman-contribution-graph@main
+        with:
+          github_user_name: ${{ github.repository_owner }}
+
+
+      - name: push pacman-contribution-graph.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
